apps/prod/searxng/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: searxng
  namespace: prod
spec:
  selector:
    app: searxng
  ports:
    - port: 8080
      targetPort: 8080
